apps/bookinfo/bookinfo/templates/bookinfo-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: productpage
  name: productpage-nodeport
spec:
  ports:
  - nodePort: 31320
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: productpage
    version: v1
  sessionAffinity: None
  type: NodePort
